# nalyvaichenko

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ToolchainAVR.cmake  ToolchainHost.cmake  ToolchainSTM32.cmake  package-lock.json
cubemx-proj/stm32f401/: .mxproject  Makefile  stm32f401.ioc
cubemx-proj/stm32f401/Core/Inc/: main.h  stm32f4xx_it.h
cubemx-proj/stm32f401/Core/Src/: adc.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
cubemx-proj/stm32f401/EWARM/: Project.eww  stm32f401.ewd  stm32f401.ewp
data/: voice.txt
data/flash/: flash.txt  memory.json
design/: RevolverJob.gcode  StockJob.gcode  case_mill.FCStd  case_mill.FCStd1  motor_holder.FCStd  motor_holder.FCStd1  motor_holder_2.FCStd  motor_holder_2.FCStd1  motor_holder_3.FCStd  motor_holder_3.FCStd1  motor_holder_bottom.txt  motor_holder_bottom_drill_3mm.txt  motor_holder_bottom_mill_3.175mm.txt  motor_holder_top.txt  revolver.FCStd  revolver.FCStd1  revolver_v2.FCStd  revolver_v2.FCStd1  revolver_v3.FCStd  revolver_v4.FCStd  revolver_v4.FCStd1  screen_cover.FCStd  screen_cover.FCStd1  top.FCStd  top.FCStd1
flash/: a.txt  flash.txt  logo.txt  memory.json  test.txt
schematic/: 306_8.wrl  IRLR2905TRPBF.step  nalyvaichenko.lib  nalyvaichenko_lib.eli  sensors.dch  sensors.dip  stm32f103.eli  stm32f103.lib
schematic/atmega_2560_pro/: deded.dip  nalyvaichenko.dch  nalyvaichenko.dip  sensors.dch  sensors.dip  stepper.dch  stepper.dip
schematic/sensors/: 2 - Bottom.gbr  2 - Bottom.gbr_iso_combined_cnc.nc  Board.gbr  Board.gbr_cutout_cnc.nc  Through.drl  Through.drl_0.6mm.nc  Through.drl_1mm.nc  Through.drl_3mm.nc  sensors.FlatPrj  sensors.dip
schematic/stm32f103/: nalyvaichenko.dch  nalyvaichenko.dip
schematic/stm32f401/: nalyvaichenko-v2.dip  nalyvaichenko.dch  nalyvaichenko.dip  nalyvaichenko_v2.dch
schematic/stm32f401_no_mosfet/: nalyvaichenko.dch  nalyvaichenko.dip
schematic/stm32f401v2/: nalyvaichenko.dch  nalyvaichenko.dip
src/: app_state.cpp  app_state.hpp  ascii_logo.hpp  barman.cpp  barman.hpp  bartender_machine.cpp  bartender_machine.hpp  bartender_machine_v2.cpp  bartender_machine_v2.hpp  command.cpp  command.hpp  config.cpp  config.hpp  config_atmega2560.hpp  config_host.hpp  config_stm32f401.hpp  df_player.cpp  df_player.hpp  ecafe_logo.hpp  event_manager.cpp  event_manager.hpp  flash_manager.cpp  flash_manager.hpp  flash_struct.hpp  gui.cpp  gui.hpp  hardware.cpp  hardware.hpp  hardware_atmega2560.cpp  hardware_host.cpp  hardware_stm32f401.cpp  main.cpp  main_atmega2560.cpp  main_stm32f401.cpp  message.cpp  message.hpp  message_processor.cpp  message_processor.hpp  progmem.hpp  sector_detector.cpp  (+13 more)
src/emu/: flash.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oledscreen.cpp  oledscreen.h  test.cpp
src/fonts/: pixel_16.cpp  pixel_16.hpp  pixel_20.cpp  pixel_20.hpp  roboto_regular_12.cpp  roboto_regular_12.hpp  roboto_regular_16.cpp  roboto_regular_18.cpp  roboto_regular_18.hpp
src/logo/: ascii_logo.cpp  ascii_logo.hpp  ecafe_logo.cpp  ecafe_logo.hpp  test_logo.cpp  test_logo.hpp
src/parsers/: command_machine.hpp  command_machine.rl  df_player_machine.hpp  df_player_machine.rl  flash_machine.hpp  flash_machine.rl  terminal_machine.hpp  terminal_machine.rl
src/storage/: anim.hpp  voice.hpp
